// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AusbauFilters should match snapshot if no layer defined, should display null. 1`] = `""`;

exports[`AusbauFilters should match snapshot if showFilterParam is an empty string, should display a select box. 1`] = `
<div class="MuiFormControl-root MuiFormControl-fullWidth makeStyles-formControl-4 css-q8hpuo-MuiFormControl-root">
  <label class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined css-1gis3ws-MuiFormLabel-root-MuiInputLabel-root"
         data-shrink="true"
  >
    angebotsschritt
  </label>
  <div class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl  css-1mycgdj-MuiInputBase-root-MuiOutlinedInput-root-MuiSelect-root">
    <div tabindex="0"
         role="combobox"
         aria-controls=":r1:"
         aria-expanded="false"
         aria-haspopup="listbox"
         class="MuiSelect-select MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input css-1ybbvap-MuiSelect-select-MuiInputBase-input-MuiOutlinedInput-input"
    >
      Projekte im Bau
    </div>
    <input aria-invalid="false"
           aria-hidden="true"
           tabindex="-1"
           class="MuiSelect-nativeInput css-yf8vq0-MuiSelect-nativeInput"
           value
    >
    <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconOutlined css-1dl46ju-MuiSvgIcon-root-MuiSelect-icon"
         focusable="false"
         aria-hidden="true"
         viewbox="0 0 24 24"
         data-testid="ArrowDropDownIcon"
    >
      <path d="M7 10l5 5 5-5z">
      </path>
    </svg>
    <fieldset aria-hidden="true"
              class="MuiOutlinedInput-notchedOutline css-1lps3wb-MuiOutlinedInput-notchedOutline"
    >
      <legend class="css-ihdtdm">
        <span class="notranslate">
          ​
        </span>
      </legend>
    </fieldset>
  </div>
</div>
`;

exports[`AusbauFilters should match snapshot if showFilterParam is true, should display a select box. 1`] = `
<div class="MuiFormControl-root MuiFormControl-fullWidth makeStyles-formControl-3 css-q8hpuo-MuiFormControl-root">
  <label class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined css-1gis3ws-MuiFormLabel-root-MuiInputLabel-root"
         data-shrink="true"
  >
    angebotsschritt
  </label>
  <div class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl  css-1mycgdj-MuiInputBase-root-MuiOutlinedInput-root-MuiSelect-root">
    <div tabindex="0"
         role="combobox"
         aria-controls=":r0:"
         aria-expanded="false"
         aria-haspopup="listbox"
         class="MuiSelect-select MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input css-1ybbvap-MuiSelect-select-MuiInputBase-input-MuiOutlinedInput-input"
    >
      Projekte im Bau
    </div>
    <input aria-invalid="false"
           aria-hidden="true"
           tabindex="-1"
           class="MuiSelect-nativeInput css-yf8vq0-MuiSelect-nativeInput"
           value
    >
    <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconOutlined css-1dl46ju-MuiSvgIcon-root-MuiSelect-icon"
         focusable="false"
         aria-hidden="true"
         viewbox="0 0 24 24"
         data-testid="ArrowDropDownIcon"
    >
      <path d="M7 10l5 5 5-5z">
      </path>
    </svg>
    <fieldset aria-hidden="true"
              class="MuiOutlinedInput-notchedOutline css-1lps3wb-MuiOutlinedInput-notchedOutline"
    >
      <legend class="css-ihdtdm">
        <span class="notranslate">
          ​
        </span>
      </legend>
    </fieldset>
  </div>
</div>
`;

exports[`AusbauFilters should match snapshot if showFilterParam is undefined or null, should display null. 1`] = `""`;
